syntax = "proto3";

package control;

service ProcessProvenance {
  rpc registry (ProvenanceReq) returns (ProvenanceRes) {}
}

message ProvenanceReq {
  string message = 1;
}

message ProvenanceRes {
  string result = 1;
}